--- a/explore.html
+++ b/explore.html
@@ -256,7 +256,7 @@
 
         <!-- Load More Button -->
         <div class="load-more">
-            <button onclick="alert('happy bhai sexy, kab pilaoge pepsi')">Load More</button>
+            <button onclick="alert('COMING SOON GUYS')">Load More</button>
         </div>
     </main>
 
